Apply cosmetic suggestions